Refactor code for creation of WriterManager instances
The update involves refactoring the way WriterManager instances are created, making use of static factory methods instead of direct constructor calls. This improves the readability and maintainability of the code. Moreover, optimized list creation in CodecListTest has been achieved by eliminating the use of ArrayList and Arrays.asList.